<resources>
    <string name="app_name">ReStyle</string>
    <string name="admin_panel">Панель администратора</string>
    <string name="admin_login">Вход для администратора</string>
    <string name="block_user">Заблокировать</string>
    <string name="unblock_user">Разблокировать</string>
    <string name="user_blocked">Пользователь заблокирован</string>
    <string name="all_users">Все пользователи</string>
    <string name="all_products">Все товары</string>
    <string name="stats">Статистика</string>
    <string name="total_users">Всего пользователей</string>
    <string name="total_products">Всего товаров</string>
    <string name="blocked_users">Заблокировано</string>
    <string name="logout_admin">Выйти из админ-панели</string>
    <string name="delete_user">Удалить пользователя</string>
    <string name="confirm_delete_user">Удалить пользователя %s? Все его товары также будут удалены.</string>
    <string name="delete_product">Удалить товар</string>
    <string name="confirm_delete_product">Удалить товар "%s"?</string>
    <string name="status_active">Активен</string>
    <string name="status_blocked">Заблокирован</string>
    <string name="search_users">Поиск пользователей...</string>
    <string name="search_products">Поиск товаров...</string>
    <string name="admin_email">admin@example.com</string>
    <string name="admin_password">admin123</string>
    <string name="enter_admin_email">Email администратора</string>
    <string name="enter_admin_password">Пароль администратора</string>
    <string name="login_as_admin">Войти как администратор</string>
    <string name="cancel">Отмена</string>
    <string name="email">Email</string>
    <string name="products_count">Товаров: %d</string>
    <string name="registered">Зарегистрирован: %s</string>
    <string name="no_users">Нет пользователей</string>
    <string name="no_products">Нет товаров</string>
    <string name="price">Цена: %s ₽</string>
    <string name="seller">Продавец: %s</string>
    <string name="status">Статус: %s</string>
</resources>